# RNNKI

./: .gitignore  500Docsum.csv  DocSum_Attn_RNN.ipynb  TextGen1.txt  TextGen500.txt  Transformer_TextGen.ipynb  Translate.csv  Translate500.csv  Translate_Attn_RNN.ipynb  clean.ipynb
DocSum/: Cargo.toml  run_cuda.sh
DocSum/src/: attention.rs  data_loader.rs  main.rs  model.rs  training.rs
DocSum85/: Cargo.toml
DocSum85/src/: attention.rs  main.rs  metrics.rs  model.rs  model_transformer.rs  tokenizer.rs  training.rs  transformer.rs
TextGen93/: Cargo.toml
TextGen93/src/: data_loader.rs  main.rs  metrics.rs  model.rs  tokenizer.rs  training.rs
Translate83/: Cargo.toml
Translate83/src/: attention.rs  data_loader.rs  main.rs  metrics.rs  model.rs  tokenizer.rs  training.rs
