[package]
name = "doc_sum"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core ML dependencies
tch = "0.22"
ndarray = "0.15"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# Utilities
anyhow = "1.0"
rand = "0.8"
indicatif = "0.17"

[features]
default = ["cpu"]
cpu = []
cuda = []